# template-tauri-react

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.yaml  BUILD.md  CHANGELOG.md  Dockerfile.dev  LICENSE  README.md  build.config.js  debug.keystore  docker-compose.dev.yml  eslint.config.js  fix-title-hooks.js  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-and-release.yml  release.yml
.husky/: commit-msg  pre-push
docs/: ANDROID_BUILD.en.md  ANDROID_BUILD.md  API_REFERENCE.en.md  API_REFERENCE.md  BUILD_DEPLOYMENT.en.md  BUILD_DEPLOYMENT.md  CACHE_CLEANUP.en.md  CACHE_CLEANUP.md  DEVELOPMENT_GUIDE.en.md  DEVELOPMENT_GUIDE.md  DOCKER.en.md  DOCKER.md  ENVIRONMENT_SETUP.en.md  ENVIRONMENT_SETUP.md  FEATURES.en.md  FEATURES.md  GITHUB_ACTIONS.en.md  GITHUB_ACTIONS.md  HUSKY_SETUP.en.md  HUSKY_SETUP.md  README.en.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md  frontend-build-optimization.en.md  frontend-build-optimization.md
scripts/: android-emulator.js  build.js  check-env.js  check-node-version.js  cleanup-build-cache.js  fix-openssl.js  ios-simulator.js  sign-apk.js
src/: App.tsx  global.d.ts  main.tsx  shims.d.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/src/: handlers.rs  lib.rs  menu.rs
src/components/: Header.tsx  Loading.tsx  NavFollow.tsx  Popup.tsx
src/config/: index.ts
src/hooks/: useData.tsx  useIpcData.tsx  usePopup.tsx  useResize.tsx  useTitle.ts  useTitle.tsx  useTitleSafe.ts  (+1 more)
vite_plugins/: svgsprites.ts
(+55 files in other folders)
