[package]
name = "template-tauri-react"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "template_tauri_react_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = { version = "2", default-features = false }
tauri-plugin-dialog = "2"
open = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 系统信息相关
num_cpus = "1.16"
sysinfo = "0.30"
rustc_version_runtime = "0.3"
# 网络相关
mac_address = "1.1"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# 编码相关
base64 = "0.22"
# 异步运行时
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation"] }

# 跨平台编译优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
